# treams

./: .buildinfo  about.html  class_index.html  dev.html  endpoint.json  function_index.html  genindex.html  gettingstarted.html  index.html  intro.html  maxwell.html  notebooks.html  objects.inv  operators.html  params.html  physicsarray.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  smatrix.html  status.json  theory.html  tmatrix.html  tmatrixc.html  treams.html  z_4f9324b2e0a22e28___init___py.html  z_4f9324b2e0a22e28__bessel_pyx.html  z_4f9324b2e0a22e28__coord_pyx.html  z_4f9324b2e0a22e28__gufuncs_pyx.html  z_4f9324b2e0a22e28__integrals_pyx.html  z_4f9324b2e0a22e28__misc_pxd.html  z_4f9324b2e0a22e28__misc_pyx.html  z_4f9324b2e0a22e28__ufuncs_pyx.html  z_4f9324b2e0a22e28__waves_pyx.html  z_4f9324b2e0a22e28__wigner3j_pyx.html  z_4f9324b2e0a22e28__wignerd_pyx.html  z_4f9324b2e0a22e28_cython_special_pyx.html  z_95b6b11253f31d4f___init___py.html  (+19 more)
.github/workflows/: build.yml
_modules/: index.html
_modules/treams/: _core.html  _lattice.html  _material.html  _operators.html  _smatrix.html  _tmatrix.html  lattice.html  misc.html  special.html
_sources/notebooks/: array_spheres.ipynb  array_spheres_tmatrixc.ipynb  band_structure.ipynb  chain.ipynb  chain_tmatrixc.ipynb  cluster.ipynb  cluster_tmatrixc.ipynb  crystal.ipynb  crystal_tmatrixc.ipynb  cylinder_tmatrixc.ipynb  grating_tmatrixc.ipynb  grid.ipynb  slab.ipynb  sphere.ipynb
_static/: documentation_options.js
docs/: _config.yml
docs/notebooks/: array_spheres_tmatrixc.md
new_docs/: _config.yml  _toc.yml  index.rst  treams.rst
new_docs/notebooks/: band_structure.md
notebooks/: array_spheres.html  array_spheres_tmatrixc.html  band_structure.html  chain.html  chain_tmatrixc.html  cluster.html  cluster_tmatrixc.html  crystal.html  crystal_tmatrixc.html  cylinder_tmatrixc.html  grating_tmatrixc.html  grid.html  slab.html  sphere.html
src/treams/: __init__.py  _core.py  _operators.py  config.pxd  config.pyx  io.py
src/treams/lattice/: _esum.pyx
tests/integration/: test_far_fields.py  treams_multiprocessing_slow.py
tests/unit/: test_operators.py
(+3 files in other folders)
